--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Chew Phuay Hern",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
@@ -17,6 +18,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.15.6",
     "flash-messenger": "^1.1.1",
+    "handlebars": "^4.7.6",
     "method-override": "^3.0.0"
   }
 }
