--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Video Jotter",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "nodemon"
   },
   "keywords": [],
   "author": "Chew Phuay Hern",
@@ -23,6 +24,7 @@
     "handlebars": "^4.7.6",
     "method-override": "^3.0.0",
     "moment": "^2.25.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
